[tool.poetry]
name = "garages_burgos"
version = "0.0.0"
description = "Asynchronous Python client for getting garage occupancy in Burgos"
authors = ["ricveal <ricveal@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ricveal/garages_burgos"
repository = "https://github.com/ricveal/garages_burgos"
keywords = ["garages", "burgos", "occupancy", "api", "async", "client"]
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"
black = "^21.6b0"
pytest-watch = "^4.2.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
